Update coworking session and wework link

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -23,7 +23,7 @@
         <a href="http://denvertheatredistrict.com/" target="_blank">
           <img src="/assets/logos/dtd.png" alt="Denver Theatre District" />
         </a>
-        <a href="http://wework.com/" target="_blank">
+        <a href="https://www.wework.com/buildings/tabor-center--denver--CO" target="_blank">
           <img src="/assets/logos/wework.png" alt="WeWork" />
         </a>
         <a href="http://understudydenver.com/" target="_blank">
