Add gallery hours text

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -1,3 +1,5 @@
+<h3 class="centered-copy">GALLERY HOURS: NOON &mdash; 5PM, JAN 24 &mdash; 28</h3>
+
 Three artists have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry.
 
 <div class="artists-container">
