First pass at conversion for Summer 2018 event

--- a/_includes/artists.html
+++ b/_includes/artists.html
@@ -1,44 +1,30 @@
-<h3 class="centered-copy">GALLERY HOURS: NOON &mdash; 5PM, JAN 24 &mdash; 28</h3>
-
-Three artists have come together to create the backdrop of Trade School. Playing off of the theme ‘the nature of work’, the artists assemble individual and collective works showcasing their unique take on work and how they have applied themselves as professional artists in and around the outdoor industry.
-
 <div class="artists-container">
   <div class="artist-cell">
-    <a href="http://sarahuhl.com/" class="artist-photo" target="_blank">
-      <img src="/assets/sarah-uhl.jpg" alt="Sarah Uhl" />
+    <a href="http://www.andrea-slusarski-art.com/" class="artist-photo" target="_blank">
+      <img src="{{ "/assets/andrea-slusarski-headshot.jpg" | relative_url }}" alt="Andrea Slusarski" />
     </a>
     <div class="artist-description">
-      <h3><a href="http://sarahuhl.com/" target="_blank">Sarah Virginia Uhl</a></h3>
-      <div class="artist-tagline">Joy evangelist on a hunt for adventure through art and advocacy for the land</div>
+      <h3><a href="http://www.andrea-slusarski-art.com/" target="_blank">Andrea Slusarski</a></h3>
       <p>
-        Sarah Uhl is an artist and advocate for the land, based out of Carbondale, Colorado. She is dedicated to making art that plays a role in the protection of public lands, clean water and climate issues. Sarah partners with brands and organizations who would like to amplify their messaging through art, visual storytelling and Live Art performances at festivals and events.
+        Andrea Slusarski is a painter/drawer and educator from Denver, Colorado. Like many midwesterners, she left the flat land and found herself in the mountains full of lines. Drawing from the landscapes she surrounds herself in, her work aims to capture the place of exploration and feeling of nature. These are captured in the lines, colors & words woven throughout her mixed media imagery.
       </p>
     </div>
   </div>
 
   <div class="artist-cell">
-    <a href="http://jackludlam.com/" class="artist-photo" target="_blank">
-      <img src="/assets/jack-ludlam.jpg" alt="Jack Ludlam" />
+    <a href="http://www.andrea-slusarski-art.com/" class="artist-photo" target="_blank">
+      <img src="{{ "/assets/andrea-slusarski-wide-open.jpg" | relative_url }}" alt="Wide & Open by Andrea Slusarski" />
     </a>
     <div class="artist-description">
-      <h3><a href="http://www.jackludlam.com/" target="_blank">Jack Ludlam</a></h3>
-      <div class="artist-tagline">Dedicated to the makers and their tools</div>
       <p>
-        Jack Ludlam is a photographer based out of Denver, Colorado. Jack’s photographs primarily focus on the people and objects that represent a different generation of the proletariat. Jack has been interested in the traditional meaning of "work" since growing up on farms in Ohio.
-      </p>
-    </div>
-  </div>
-
-  <div class="artist-cell">
-    <a href="http://johnfellowsart.com/" class="artist-photo" target="_blank">
-      <img src="/assets/john-fellows.jpg" alt="John Fellows" />
-    </a>
-    <div class="artist-description">
-      <h3><a href="http://johnfellowsart.com/" target="_blank">John Fellows</a></h3>
-      <div class="artist-tagline">Travel, Art, Mountains and Water</div>
-      <p>
-        John Fellows' signature "contemporary folk" style weaves together layers of found paper, graphic block prints and handwritten text to create an old time, hands-on feel. He collects a variety of found paper, maps and books dating from the 1880s to the present to create unique linoleum carving collages that while at the very base reflect his personal experiences, are more like a brief glimpse into someone else’s story.
+        “Ever since I can imagine, I’ve needed to be outside - adventuring, sketching, getting lost in the surroundings around me and in my drawings. Creating is my way of fully submerging myself into my world. My art is inspired by the simple connection I hold with nature and the feeling I try to preserve with every painting or drawing. I feel most alive when I am out in the wilderness, and even more so when I create.”
       </p>
     </div>
   </div>
 </div>
+
+<h3 class="centered-copy">
+  EXHIBIT HOURS<br />
+  8:00AM - 8:00PM | July 22 - July 30 <br />
+  Aloft Hotel, 800 15th Street, Denver
+</h3>
