--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,7 +10,7 @@
   </div>
   <div class="site-attribution">
     <a href="#about" title="A project of Something Independent">
-      A project of <img src="/assets/si_logo_white.png" alt="Something Independent" />
+      A project of <img src="{{ "/assets/si_logo_teal.png" | relative_url }}" alt="Something Independent" />
     </a>
   </div>
 </header>
@@ -18,7 +18,7 @@
 {% unless layout.exclude_tagline %}
   <section class="site-tagline">
     <div class="wrapper">
-      January 24 &mdash; 28, 2018
+      July 23 &mdash; 26 | Denver
     </div>
   </section>
 {% endunless %}
