--- a/_includes/location.html
+++ b/_includes/location.html
@@ -11,4 +11,4 @@
     </section>
   </div>
 {% endif %}
-<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJF46nztF4bIcRp71C4_p-sn4&key=AIzaSyAlRyNJifvgv8T2QFhiHG9ZgwQ1P7So8AM" allowfullscreen></iframe>
+<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q={{ site.location_address | url_encode }}&key=AIzaSyAlRyNJifvgv8T2QFhiHG9ZgwQ1P7So8AM" allowfullscreen></iframe>
