--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -5,7 +5,7 @@
   <div class="content-section">
     <div class="partner-si-logo">
       <a href="#about">
-        <img src="/assets/si_logo_transparent.png" alt="A project of Something Independent" />
+        <img src="/assets/si_logo_teal.png" alt="A project of Something Independent" />
       </a>
     </div>
 
@@ -16,45 +16,12 @@
     <div class="sponsor-logos">
       <div class="logo-row-1up">
         <a href="https://choosecolorado.com/programs-initiatives/outdoor-recreation-industry-office/" target="_blank">
-          <img src="/assets/logos/orec.png" alt="Colorado Outdoor Recreation Industry Office" />
+          <img src="{{ "/assets/logos/orec.png" | relative_url }}" alt="Colorado Outdoor Recreation Industry Office" />
         </a>
       </div>
-      <div class="logo-row-3up">
-        <a href="http://denvertheatredistrict.com/" target="_blank">
-          <img src="/assets/logos/dtd.png" alt="Denver Theatre District" />
-        </a>
-        <a href="https://www.wework.com/buildings/tabor-center--denver--CO" target="_blank">
-          <img src="/assets/logos/wework.png" alt="WeWork" />
-        </a>
-        <a href="http://understudydenver.com/" target="_blank">
-          <img src="/assets/logos/understudy.png" alt="Understudy | Denver" />
-        </a>
-      </div>
-      <div class="logo-row-3up">
-        <a href="http://larimersquare.com/" target="_blank">
-          <img src="/assets/logos/larimer-square.png" alt="Larimer Square" />
-        </a>
-        <a href="http://tapinco.org/" target="_blank">
-          <img src="/assets/logos/tapin.png" alt="Tap-IN" />
-        </a>
-        <a href="https://www.nblenergy.com/" target="_blank">
-          <img src="/assets/logos/noble-energy.jpg" alt="Noble Energy" />
-        </a>
-      </div>
-      <div class="logo-row-3up">
-        <a href="http://postmodernco.com/" target="_blank">
-          <img src="/assets/logos/postmodern.png" alt="Postmodern Company" />
-        </a>
-        <a href="http://next100coalition.org/" target="_blank">
-          <img src="/assets/logos/next100.png" alt="Next 100 Coalition" />
-        </a>
-        <a href="http://getharmonic.com/" target="_blank">
-          <img src="/assets/logos/harmonic.png" alt="Harmonic Media" />
-        </a>
-      </div>
-      <div class="logo-row-3up">
-        <a href="http://thecommons.co/" target="_blank">
-          <img src="/assets/logos/the-commons.png" alt="The Commons on Champa" />
+      <div class="logo-row-1up">
+        <a href="http://www.aloftdenverdowntown.com/" target="_blank">
+          <img src="{{ "/assets/logos/aloft-denver-downtown.jpg" | relative_url }}" alt="Aloft Denver Downtown" />
         </a>
       </div>
     </div>
