--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -1,5 +1,5 @@
 .site-header {
-  background-color: $navy-color;
+  background-color: $background-color;
   position: relative;
   z-index: 1;
 }
@@ -12,9 +12,9 @@
   left: 0;
   width: 100%;
   height: 100%;
-  opacity : 0.2;
+  opacity : 0.8;
 
-  background-image: url('/assets/bark_topo_pattern_white.png');
+  background-image: url('/assets/bark_topo_pattern.png');
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -31,7 +31,7 @@
   padding: $spacing-unit * 2 0 $spacing-unit / 2 0;
   text-align: center;
   text-decoration: none;
-  color: $background-color;
+  color: $teal-color;
   z-index: 10;
 }
 
@@ -39,12 +39,12 @@
   position: relative;
   font-size: ms(3);
   font-family: $base-font-family;
-  font-weight: 100;
+  font-weight: $base-font-weight;
   line-height: 1;
   // padding: $spacing-unit 0 $spacing-unit / 2 0;
   text-align: center;
   text-transform: uppercase;
-  color: $background-color;
+  color: $teal-color;
   z-index: 10;
 }
 
@@ -64,9 +64,9 @@
     margin: 0 $spacing-unit 0 0;
     font-size: ms(-1);
     font-family: $base-font-family;
-    font-weight: 100;
+    font-weight: $base-font-weight;
     line-height: 1;
-    color: $background-color;
+    color: $teal-color;
     text-transform: uppercase;
     text-decoration: none;
 
@@ -96,7 +96,7 @@
 
   a {
     margin: 0 $spacing-unit 0 0;
-    color: $background-color;
+    color: $teal-color;
 
     @include media-query($on-palm) {
       margin: 0 $spacing-unit / 2;
@@ -106,7 +106,7 @@
 
 .site-tagline {
   text-align: center;
-  background-color: $aqua-color;
+  background-color: $orange-color;
   color: $background-color;
   font-size: ms(3);
   font-family: $heading-font-family;
@@ -120,7 +120,7 @@
 
 .site-nav {
   padding: $spacing-unit / 3 0;
-  background-color: $aqua-color;
+  background-color: $orange-color;
 }
 
 .site-nav ul {
@@ -160,7 +160,7 @@
 .content-section-header {
   width: 100%;
   color: $background-color;
-  background-color: $aqua-color;
+  background-color: $orange-color;
   text-align: center;
   padding: $spacing-unit / 2 0;
   font-size: ms(4);
@@ -170,6 +170,15 @@
   a, a:hover {
     color: inherit;
     text-decoration: none;
+  }
+}
+
+.intro-images-container {
+  margin: $spacing-unit 0;
+
+  img {
+    width: 33%;
+    display: inline-block;
   }
 }
 
@@ -229,7 +238,7 @@
   font-size: ms(1);
   padding: $spacing-unit / 2;
   margin: $spacing-unit / 2 0;
-  background-color: $aqua-color;
+  background-color: $brown-color;
   color: $background-color;
   text-decoration: none;
   -webkit-appearance: none;
@@ -377,7 +386,7 @@
   font-size: ms(1);
   padding: $spacing-unit / 2;
   margin: $spacing-unit auto;
-  background-color: $aqua-color;
+  background-color: $brown-color;
   color: $background-color;
   text-decoration: none;
   -webkit-appearance: none;
