--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -5,7 +5,7 @@
   <div class="content-section">
     <div class="wrapper">
       <p class="centered-copy">
-        Over the years, we have come to see what 'real work' looks like and better understand the mindset that lies behind it – a disposition inherent to the Mountain West and the independent-minded men and women who carve their paths here. Something Independent sets out to celebrate the industry and culture of the outdoors. Past programs including the Economics of Soul, the Art of Winter and the Entrepreneurs’ Garage highlighting the industry’s outsized impact on communities and economies across the west. Current initiatives such as The Wright, S|I OutPost and Trade School provide a means through which to explore the challenges and possibilities that bring us closer to the core of meaningful work.
+        Over the years, we have come to see what 'real work' looks like and better understand the mindset that lies behind it – a disposition inherent to the Mountain West and the independent-minded men and women who carve their paths here. Current initiatives such as <a href="http://thewright.co/">The Wright</a>, S|I OutPost and Trade School provide a means through which to explore the challenges and possibilities that bring us closer to the core of meaningful work.
       </p>
 
       {% include mailchimp-si.html %}
