Update sponsor logos

--- a/_includes/sponsors.html
+++ b/_includes/sponsors.html
@@ -24,9 +24,25 @@
           <img src="{{ "/assets/logos/aloft-denver-downtown.jpg" | relative_url }}" alt="Aloft Denver Downtown" />
         </a>
       </div>
+      <div class="logo-row-2up">
+        <a href="https://www.thepublicworks.biz/" target="_blank">
+          <img src="{{ "/assets/logos/public-works.png" | relative_url }}" alt="The Public Works" />
+        </a>
+        <a href="https://getharmonic.com/" target="_blank">
+          <img src="{{ "/assets/logos/harmonic.png" | relative_url }}" alt="Harmonic Media" />
+        </a>
+      </div>
+      <div class="logo-row-2up">
+        <a href="https://meetatct.com/" target="_blank">
+          <img src="{{ "/assets/logos/centertable.png" | relative_url }}" alt="CenterTable" />
+        </a>
+        <a href="http://www.inlandplanning.com/" target="_blank">
+          <img src="{{ "/assets/logos/inland-planning.png" | relative_url }}" alt="Inland Planning" />
+        </a>
+      </div>
     </div>
     <p class="sponsor-copy">
-      And a very special thanks to all who rolled-up their sleeves in building Trade School: <a href="http://www.citywild.org/" target="_blank">cityWILD</a>, <a href="https://meetatct.com/" target="_blank">Center Table</a>, <a href="http://groundfloormedia.com/" target="_blank">Ground Floor Media</a>, <a href="http://www.oskarblues.com/" target="_blank">Oskar Blues</a>, <a href="http://drumbeat.us/" target="_blank">Drumbeat</a>, <a href="https://choosecolorado.com/" target="_blank">Colorado Office of Economic Development and International Trade</a>, <a href="https://outdoorindustry.org/" target="_blank">Outdoor Industry Association (OIA)</a>, <a href="https://www.snowsports.org/" target="_blank">SnowSports Industries America (SIA)</a>, and <a href="https://www.denver.org/" target="_blank">Visit Denver</a>.
+      With special thanks to the <a href="https://outdoorindustry.org/">Outdoor Industry Association</a> and <a href="https://www.outdoorretailer.com/">Outdoor Retailer</a>.
     </p>
   </div>
 </div>
